[filechooser] Don't add extra ref to file, as it it comes from gtk_tree_model_get()

Leak kindly reported by leak finder extraordinaire Morten Welinder <mortenw@gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=646457